--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8081
+
 spring.application.name=DisasterServiceBackend
+
+image.directory=images
+
+spring.datasource.url=jdbc:mysql://localhost:3306/disaster_detection?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+# db response name
+spring.datasource.username=dev
+# db response password
+spring.datasource.password=qqwwee11@@
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
