--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ server.port=8081
 
 spring.application.name=DisasterServiceBackend
 
-image.directory=images
 
 spring.datasource.url=jdbc:mysql://localhost:3306/disaster_detection?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 # db response name
@@ -13,3 +12,7 @@ spring.datasource.password=qqwwee11@@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+
+
+image.directory=images
+image.normalImageLabel=3
